@@ -15,6 +15,7 @@ PTXCONF_PROJECT_VERSION="-0.00"
 #
 PTXCONF_DEVMEM2=m
 # PTXCONF_DEVNODES is not set
+PTXCONF_LIBUIO=m
 
 #
 # PTXdist Base Configuration       
