@@ -32,6 +32,7 @@ PTXCONF_DEVNODES_UIO=m
 PTXCONF_DEVNODES_UIO_MAJOR=254
 # PTXCONF_DEVNODES_BLK is not set
 PTXCONF_DEVNODES_ICAP=m
+PTXCONF_LIBUIO=m
 
 #
 # PTXdist Base Configuration       
